# projectwhy-tts

./: .gitignore  AGENTS.md  README.md  TODO.md  config.example.toml  pyproject.toml
.cursor/: mcp.json
.cursor/skills/test-harness/: SKILL.md
docs/: epub-plain-text-mapping-future-work.md  inspector.md
src/projectwhy/: __init__.py  __main__.py  config.py  mcp_controller.py  mcp_qt_worker.py  mcp_server.py  mcp_tool_handlers.py
src/projectwhy/core/: __init__.py  audiobook.py  document.py  epub.py  layout.py  models.py  pdf.py  plain_qt.py  playback_speed.py  player.py  prefetch.py  reading_order.py  session.py  sidecar.py  substitutions.py  text.py  time_stretch.py  utterance_cache.py
src/projectwhy/core/tts/: __init__.py  base.py  kokoro_tts.py  mistral_voxtral_tts.py  openai_tts.py
src/projectwhy/gui/: __init__.py  app.py  audiobook_dialog.py  controls.py  pdf_view.py  text_view.py
src/projectwhy/gui/inspector/: __init__.py  colors.py  dock.py
src/projectwhy/gui/settings/: __init__.py  dialog.py
src/projectwhy/gui/settings/pages/: __init__.py  block_types.py  general.py  pdf_text.py  playback.py  substitutions.py  voice_speech.py
src/projectwhy_tts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  helper_cli.py  helpers.py  test_audiobook_manifest.py  test_config_save_pdf_text.py  test_epub_text_view.py  test_pdf_blocks.py  test_plain_qt.py  test_substitutions.py  test_unit_layout.py  test_unit_navigation.py  test_unit_player.py
tests/fixtures/: sewtha_p1_speakable_order.json
tests/fixtures/pdfs/: sewtha_p1.pdf.projectwhy.toml
tests/resources/: pg389-images-3.epub
