[project]
name = "projectwhy-tts"
version = "0.1.0"
description = "Local PDF/EPUB reader with Kokoro TTS and word highlighting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kokoro>=0.9",
    "misaki[en]>=0.8",
    "dill>=0.3.8",
    "pypdfium2>=4",
    "paddlepaddle>=3.0.0",
    "paddleocr>=3.0.0",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "Pillow>=10",
    "PyQt6>=6.6",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "spacy>=3.7",
    "huggingface-hub>=0.20",
    "ruff>=0.15.9",
    "tomli-w>=1.2.0",
    "pyrubberband>=0.4.0",
    "mistralai>=1.5.0",
    "openai>=1.0"
]

[dependency-groups]
dev = ["pytest>=8", "pytest-qt>=4.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"
markers = [
    "slow: real PDF + layout model (deselect with -m 'not slow')",
]

[project.scripts]
projectwhy = "projectwhy.__main__:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

# Package import name is `projectwhy` under src/, not projectwhy_tts.
[tool.hatch.build.targets.wheel]
packages = ["src/projectwhy"]

[tool.ruff]
line-length = 100
